--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
   <!-- copyright section start -->
   <div class="copyright_section">
     <div class="container">
-      <p class="copyright_text">Copyright 2020 All Right Reserved By <a href="https://html.design/">WEBPAS</p>
+      <p class="copyright_text">Copyright 2020 All Right Reserved By <a href="https://main--nayzar.netlify.app/">WEBPAS</p>
     </div>
   </div>
   <!-- copyright section end -->
