--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="404.html">blog</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="#supporters">Sponsors</a></li>
+          <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
@@ -516,61 +516,77 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Supporters Section ======= -->
-    <section id="supporters" class="section-with-bg">
+    <section id="supporters" class="section-with-bg container">
 
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Sponsors</h2>
+          <h2>Layanan</h2>
         </div>
 
         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-3 col-md-4 col-xs-6 container">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_10-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #4e91fc; font-weight: bold;">PENGECEKAN</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">RUTIN</P2>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_11-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #4e91fc; font-weight: bold;">SERVICE</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">STEERING</P2>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_19-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #4e91fc; font-weight: bold;">TUNE UP</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">MESIN</P2>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_2-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">SERVICE</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">KELISTRIKAN</P2>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_24-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #4e91fc; font-weight: bold;">SERVICE</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">KAKI-KAKI</P2>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_31-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #4e91fc; font-weight: bold;">SERVICE</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">PENGEREMAN</P2>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_36-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #4e91fc; font-weight: bold;">MOBIL</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">MOGOK</P2>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_34-min.png" class="img-fluid" alt="">
             </div>
+            <h1 style="display: flex; justify-content: center; color: #4e91fc; font-weight: bold;">GANTI</h1>
+            <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">OLI</P2>
           </div>
 
         </div>
@@ -657,7 +673,7 @@
     </section><!-- End  F.A.Q Section -->
 
 
-    <section id="buy-tickets" class="section-with-bg">
+    <!-- <section id="buy-tickets" class="section-with-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -708,7 +724,7 @@
               </div>
             </div>
           </div>
-          <!-- Pro Tier -->
+          Pro Tier
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-body">
@@ -735,7 +751,7 @@
 
       </div>
 
-      <!-- Modal Order Form -->
+      
       <div id="buy-ticket-modal" class="modal fade">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -764,11 +780,11 @@
                 </div>
               </form>
             </div>
-          </div><!-- /.modal-content -->
+          /.modal-content -->
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
 
-    </section><!-- End Buy Ticket Section -->
+    </section>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="section-bg">
