--- a/index.html
+++ b/index.html
@@ -260,9 +260,65 @@
 
           </div>
           <!-- End Schdule Day 1 -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-2">
 
+
+
+            <div class="row schedule-item">
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                </div>
+                <h4>1.isi</h4>
+                <p>penjelasan.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                </div>
+                <h4>1.isi</h4>
+                <p>penjelasan.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                </div>
+                <h4>1.isi</h4>
+                <p>penjelasan.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                </div>
+                <h4>1.isi</h4>
+                <p>penjelasan.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                </div>
+                <h4>1.isi</h4>
+                <p>penjelasan.</p>
+              </div>
+            </div>
+
+            
+
+          </div>
           <!-- Schdule Day 2 -->
-                   <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+                   <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-3">
 
 
 
