Penambahan gambar ibnu

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/21.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>2.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -229,9 +229,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/2.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>3.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -239,9 +239,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/3.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>4.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -249,9 +249,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/12.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>5.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -267,7 +267,7 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/31.jpg" alt="Brenden Legros">
                 </div>
                 <h4>1.isi</h4>
                 <p>penjelasan.</p>
@@ -277,9 +277,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/412.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>2.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -287,9 +287,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/414.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>3.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -297,9 +297,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/3123.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>4.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -307,9 +307,9 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/3213.jpg" alt="Brenden Legros">
                 </div>
-                <h4>1.isi</h4>
+                <h4>5.isi</h4>
                 <p>penjelasan.</p>
               </div>
             </div>
@@ -325,7 +325,7 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/13213.jpg" alt="Brenden Legros">
                 </div>
                 <h4>1.isi</h4>
                 <p>penjelasan.</p>
@@ -335,7 +335,7 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/31231.jpg" alt="Brenden Legros">
                 </div>
                 <h4>1.isi</h4>
                 <p>penjelasan.</p>
@@ -345,7 +345,7 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/123123.jpg" alt="Brenden Legros">
                 </div>
                 <h4>1.isi</h4>
                 <p>penjelasan.</p>
@@ -355,7 +355,7 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/12312312.jpg" alt="Brenden Legros">
                 </div>
                 <h4>1.isi</h4>
                 <p>penjelasan.</p>
@@ -365,7 +365,7 @@
             <div class="row schedule-item">
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/about-bg.jpg" alt="Brenden Legros">
                 </div>
                 <h4>1.isi</h4>
                 <p>penjelasan.</p>
