--- a/index.html
+++ b/index.html
@@ -385,36 +385,36 @@
             <ul class="faq-list">
 
               <li>
-                <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">1. Mobil bermasalah? Hubungi kami <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">1. Apakah bengkel ini dapat melakukan perbaikan darurat? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq1" class="collapse" data-bs-parent=".faq-list">
                   <p>
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                    Tentu saja, bengkel ini dapat melakukan perbaikan darurat dan pastinya menerima pannggilan dari customer kapanpun dan dimanapun.
                   </p>
                 </div>
               </li>
 
               <li>
-                <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">2. Mekanik kami datang kepada Anda <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">2. Apa keuntungan menggunakan bengkel panggilan? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                   <p>
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Keuntungan utama adalah kenyamanan. Anda tidak perlu repot membawa kendaraan ke bengkel, dan pekerjaan perbaikan dilakukan di tempat yang Anda tentukan. Ini juga bisa menghemat waktu dan usaha.
                   </p>
                 </div>
               </li>
 
               <li>
-                <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">3.Bayar setelah servis selesai <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">3.BApa jenis layanan yang bisa saya dapatkan dari bengkel panggilan? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                   <p>
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    Bengkel panggilan biasanya menyediakan berbagai layanan, termasuk perawatan rutin, perbaikan umum, pemantauan sistem kendaraan, perbaikan mesin, perbaikan rem, penggantian oli, dan banyak lagi.
                   </p>
                 </div>
               </li>
                  <li>
-                <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">4. Servis kami bergaransi <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">4. Apakah bengkel panggilan memberikan garansi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                   <p>
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    Ya, sebagian besar bengkel panggilan memberikan garansi untuk pekerjaan yang mereka lakukan dan suku cadang yang mereka pasang. Pastikan untuk memahami syarat dan ketentuan garansi sebelum menerima perbaikan.
                   </p>
                 </div>
               </li>
