ibnu update speakers section

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <section id="speakers">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Bbeberapa pekerjaan kami</h2>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h2>Beberapa pekerjaan kami</h2>
+          <p>Beberapa pekerjaan yang kami kerjakan saat melakukan service.</p>
         </div>
 
         <div class="row">
@@ -118,8 +118,8 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/gallery/4.jpg" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Lorem, ipsum.</a></h3>
-                <p>Lorem, ipsum dolor.</p>
+                <h3><a href="speaker-details.html">Pengecekan kondisi mesin</a></h3>
+                <p>Biasanya pengecekkan ini di lakukan di awal service</p>
               </div>
             </div>
           </div>
@@ -127,8 +127,8 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/gallery/8.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Lorem, ipsum.</a></h3>
-                <p>Lorem, ipsum dolor.</p>
+                <h3><a href="speaker-details.html">Persiapan perkakas montir</a></h3>
+                <p>Persiapan ini dilakukan untuk memastikan peralatan</p>
               </div>
             </div>
           </div>
@@ -136,8 +136,26 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/31.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Lorem, ipsum.</a></h3>
-                <p>Lorem, ipsum dolor.</p>
+                <h3><a href="speaker-details.html">Proses pelepasan mesin</a></h3>
+                <p>Proses ini di lakukan pada saat service besar</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
+              <img src="assets/img/4122.jpg" alt="Speaker 3" class="img-fluid">
+              <div class="details">
+                <h3><a href="speaker-details.html">Proses Service</a></h3>
+                <p>Proses ini dimana montir melakukan service</p>
+             </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
+              <img src="assets/img/12.jpg" alt="Speaker 3" class="img-fluid">
+              <div class="details">
+                <h3><a href="speaker-details.html">Pengecekan ecu</a></h3>
+                <p>Untuk mengecek kerusakan yang terdeteksi pada ecu</p>
              </div>
             </div>
           </div>
@@ -145,26 +163,8 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/31.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Lorem, ipsum.</a></h3>
-                <p>Lorem, ipsum dolor.</p>
-             </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/31.jpg" alt="Speaker 3" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Lorem, ipsum.</a></h3>
-                <p>Lorem, ipsum dolor.</p>
-             </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/31.jpg" alt="Speaker 3" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Lorem, ipsum.</a></h3>
-                <p>Lorem, ipsum dolor.</p>
+                <h3><a href="speaker-details.html">Montir pulang</a></h3>
+                <p>Montir pulang karena sudah selesai</p>
              </div>
             </div>
           </div>
