--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="index.html" class="scrollto"><img src="assets/img/logo.png" alt="" title=""></a>
       </div>
 
-      <nav id="navbar" class="navbar order- order-lg-0">
+      <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
@@ -64,7 +64,7 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="https://wa.wizard.id/f25a5e">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -72,14 +72,14 @@
 
     </div>
   </header><!-- End Header -->
-
+  <a href="https://wa.wizard.id/f25a5e"><img class="wa" src="assets/img/wa.png" alt=""> </a>
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><br><span>INDOMONTIR</span> </h1>
       <p class="mb-4 pb-0">Service mobil panggilan Jakarta Bekasi Bogor Tangerang.</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
-      <a href="#about" class="about-btn scrollto">About The INDOMONTIR</a>
+      <a href="https://wa.wizard.id/f25a5e" class="about-btn scrollto">konsultasi gratis</a>
     </div>
   </section><!-- End Hero Section -->
 
@@ -180,8 +180,8 @@
       <div class="container-fluid" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Event Venue</h2>
-          <p>Event venue location info and gallery</p>
+          <h2>Pengalaman Pelanggan Kami</h2>
+          <p>Dibawah ini beberapa testimoni customer kami yang telah menggunakan layanan servis mobil di Indomontir.</p>
         </div>
 
         
