Update index.html 6

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>INDOMONTIR</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="montir pamggilam" name="description">
+  <meta content="Indomontir" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo.png" rel="icon">
