--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
-          <li><a class="nav-link scrollto" href="404.html">blog</a></li>
+          <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
