--- a/blog1.html
+++ b/blog1.html
@@ -41,7 +41,7 @@
 
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
