--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
               </li>
 
               <li>
-                <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">3.BApa jenis layanan yang bisa saya dapatkan dari bengkel panggilan? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">3.Berapa jenis layanan yang bisa saya dapatkan dari bengkel panggilan? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                   <p>
                     Bengkel panggilan biasanya menyediakan berbagai layanan, termasuk perawatan rutin, perbaikan umum, pemantauan sistem kendaraan, perbaikan mesin, perbaikan rem, penggantian oli, dan banyak lagi.
