--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>About Us</h2>
-            <p>Kami I'M AUTO BENZ telah hadir untuk melayani segala macam keluhan mobil Mercy Anda. Dengan Montir yang ahli dan berpengalaman untuk kendaraan Mercedes-Benz Anda. lebih dari 15 tahun.</p>
+            <p>Kami adalah penyedia layanan bengkel mobil yang siap membantu Anda dengan segala kebutuhan perbaikan dan perawatan kendaraan Anda. Dengan pengalaman bertahun-tahun dalam industri otomotif, kami telah membangun reputasi sebagai mitra terpercaya untuk pemilik kendaraan di seluruh JABODETABEK, kami menerima panggilan dalam kurun waktu 24 jam</p>
           </div>
           <div class="col-lg-3">
             <h3>Lokasi</h3>
-            <p>jalan kincan</p>
+            <p>JABODETABEK</p>
           </div>
           <div class="col-lg-3">
             <h3>buka jam berapa</h3>
-            <p>senin-jumat<br>24jam</p>
+            <p>senin - jumat<br>24jam</p>
           </div>
         </div>
       </div>
@@ -548,7 +548,7 @@
 
         <div class="section-header">
           <h2>Contact Us</h2>
-          <p>Nihil officia ut sint molestiae tenetur.</p>
+          <p>Berikut beberapa pilihan untuk menghubungi kami.</p>
         </div>
 
         <div class="row contact-info">
@@ -557,7 +557,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>Jabodetabek</address>
+              <address>JABODETABEK</address>
             </div>
           </div>
 
