--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body>
 
   <!-- ======= Header ======= -->
+   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
@@ -41,11 +42,11 @@
 
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="https://main--tapang.netlify.app//index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
+          <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
@@ -71,7 +72,7 @@
       <a class="buy-tickets scrollto" href="#buy-tickets">Wa</a>
 
     </div>
-  </header><!-- End Header -->
+  </header>
   <a href="https://wa.wizard.id/f25a5e"><img class="wa" src="assets/img/wa.png" alt=""> </a>
   <!-- ======= Hero Section ======= -->
   <section id="hero">
