--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,8 @@
 
 <body>
 
-<header id="header" class="d-flex align-items-center ">
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
       <div id="logo" class="me-auto">
@@ -40,12 +41,12 @@
 
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#venue">Service</a></li>
+         <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html">About</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Service</a></li>
           <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
+          <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
+          <li><a class="nav-link scrollto" href="index.htmls">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
