--- a/galeri.html
+++ b/galeri.html
@@ -100,7 +100,7 @@
   }
 </style>
 
-<section id="">
+<section id="about2">
   <div class="container position-relative" data-aos="fade-up">
     <div class="row">
       <div class="col-lg-6">
