--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="https://main--tapang.netlify.app//index.html#about">About</a></li>
+          <li><a class="nav-link scrollto" href="https://main--tapang.netlify.app/index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
