--- a/index.html
+++ b/index.html
@@ -271,17 +271,17 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Gallery</h2>
-          <p>Check our gallery from the recent events</p>
+          <p>Here are some photos of us working</p>
         </div>
       </div>
 
       <div class="gallery-slider swiper">
         <div class="swiper-wrapper align-items-center">
           <div class="swiper-slide"><a href="assets/img/gallery/1.jpg" class="gallery-lightbox"><img src="assets/img/gallery/1.jpg" class="img-fluid" alt=""></a></div>
-          <div class="swiper-slide"><a href="assets/img/gallery/2.jpg" class="gallery-lightbox"><img src="assets/img/gallery/2.jpg" class="img-fluid" alt=""></a></div>
-          <div class="swiper-slide"><a href="assets/img/gallery/3.jpg" class="gallery-lightbox"><img src="assets/img/gallery/3.jpg" class="img-fluid" alt=""></a></div>
+          <div class="swiper-slide"><a href="assets/img/gallery/mesin-mobil.jpg" class="gallery-lightbox"><img src="assets/img/gallery/mesin-mobil.jpg" class="img-fluid" alt=""></a></div>
+          <div class="swiper-slide"><a href="assets/img/gallery/ford-mustang-service.jpg" class="gallery-lightbox"><img src="assets/img/gallery/ford-mustang-service.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/4.jpg" class="gallery-lightbox"><img src="assets/img/gallery/4.jpg" class="img-fluid" alt=""></a></div>
-          <div class="swiper-slide"><a href="assets/img/gallery/5.jpg" class="gallery-lightbox"><img src="assets/img/gallery/5.jpg" class="img-fluid" alt=""></a></div>
+          <div class="swiper-slide"><a href="assets/img/gallery/perkabelan-mobil.jpg" class="gallery-lightbox"><img src="assets/img/gallery/perkabelan-mobil.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/6.jpg" class="gallery-lightbox"><img src="assets/img/gallery/6.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/7.jpg" class="gallery-lightbox"><img src="assets/img/gallery/7.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/8.jpg" class="gallery-lightbox"><img src="assets/img/gallery/8.jpg" class="img-fluid" alt=""></a></div>
