--- a/galeri.html
+++ b/galeri.html
@@ -122,75 +122,92 @@
   }
 </style>
 
+<style>
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+    margin: 20px 0;
+  }
+
+  .card {
+    width: 100%;
+    height: 100%;
+  }
+
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+</style>
+
 <div class="card-container">
   <div class="card card1">
-    <img style="height: 100%;" src="assets/img/2.jpg" class="card-img-top" alt="...">
-  </div>
-
-  <div class="card">
-    <img style="height: 100%;" src="assets/img/3.jpg" class="card-img-top" alt="...">
- </div>
-
-  <div class="card">
-    <img style="height: 100%;" src="assets/img/1.jpg" class="card-img-top" alt="...">
-  </div>
-
-  <div class="card">
-    <img style="height: 100%;" src="assets/img/123123.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/2.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/perkabelan-mobil.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/3.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/mesin-mobil.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/1.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/ford-mustang-service.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/123123.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/sedan-service.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/gallery/perkabelan-mobil.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/pickup-trouble.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/gallery/mesin-mobil.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/service-diparkiran.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/gallery/ford-mustang-service.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/mobil-mangkrak.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/gallery/sedan-service.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/pengecekan.jpg" class="card-img-top" alt="...">
+    <img src="assets/img/gallery/pickup-trouble.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/bagian-mesim.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/gallery/service-diparkiran.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/pengerjaan.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/gallery/mobil-mangkrak.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/3213.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/gallery/pengecekan.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/31231.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/gallery/bagian-mesim.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/13213.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/gallery/pengerjaan.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/21.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/3213.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/3123.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/31231.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/12312312.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/13213.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/4122.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/21.jpg" class="card-img-top" alt="...">
   </div>
-   <div class="card">
-    <img style="height: 100%;" src="assets/img/gallery/31.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="assets/img/3123.jpg" class="card-img-top" alt="...">
+  </div>
+  <div class="card">
+    <img src="assets/img/12312312.jpg" class="card-img-top" alt="...">
+  </div>
+  <div class="card">
+    <img src="assets/img/gallery/4122.jpg" class="card-img-top" alt="...">
+  </div>
+  <div class="card">
+    <img src="assets/img/gallery/31.jpg" class="card-img-top" alt="...">
   </div>
 </div>
 <!-- galeri end -->
