--- a/galeri.html
+++ b/galeri.html
@@ -105,7 +105,7 @@
     <div class="row">
       <div class="col-lg-6">
         <h2 style="font-size: 2rem; font-weight: bold; margin-bottom: 1rem;">Galeri</h2>
-        <p style="font-size: 1.2rem;">Kami adalah penyedia layanan bengkel mobil yang siap membantu Anda dengan segala kebutuhan perbaikan dan perawatan kendaraan Anda. Dengan pengalaman bertahun-tahun dalam industri otomotif, kami telah membangun reputasi sebagai mitra terpercaya untuk pemilik kendaraan di seluruh JABODETABEK, kami menerima panggilan dalam kurun waktu 24 jam.</p>
+        <p style="font-size: 1.2rem;">Berikut beberapa foto saat kami sedang bekerja.</p>
       </div>
     </div>
   </div>
