--- a/blog1.html
+++ b/blog1.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="a33cd178-d31d-4ebf-bdc5-6273eac25377";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   <!-- ======= Header ======= -->
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
